Closed
Bug 83752
Opened 24 years ago
Closed 23 years ago
Progress window not closed when user close the compose window while sending
Categories
(MailNews Core :: Composition, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla0.9.6
People
(Reporter: esther, Assigned: bugzilla)
Details
Attachments
(1 file)
475 bytes,
patch
|
vparthas
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
Using build 2001-05-31 on Mac only, and while verifying bug 82195 I found
another reproducible crash on Mac.
1. Launch App to come up in 3-pane window
2. Login to your mail account (mine was imap with copy to sent folder imap)
3. Select New Msg (mine was html compose)
4. Address it and add an attachment so while sending you can stop the send by
trying to close the Compose window.
5. Send and quickly click on the title bar close icon
6. OK the warning that the send isn't finsihed.
7. now File|Quit
Crash
here is where it crashed from talkback incident 31206206
.__ptr_glue
nsMsgComposeAndSend::NotifyListenerOnStopCopy() [nsMsgSend.cpp, line 3279]
CopyListener::OnStopCopy() [nsMsgCopy.cpp, line 141]
nsMsgCopyService::ClearRequest() [nsMsgCopyService.cpp, line 161]
nsMsgCopyService::~nsMsgCopyService() [nsMsgCopyService.cpp, line 144]
nsMsgCopyService::Release() [nsMsgCopyService.cpp, line 287]
DeleteEntry() [nsServiceManager.cpp, line 258]
_hashEnumerateRemove() [nsHashtable.cpp, line 367]
PL_HashTableEnumerateEntries() [plhash.c, line 413]
nsHashtable::Reset() [nsHashtable.cpp, line 383]
nsObjectHashtable::Reset() [nsHashtable.cpp, line 626]
nsObjectHashtable::~nsObjectHashtable() [nsHashtable.cpp, line 592]
nsServiceManagerImpl::~nsServiceManagerImpl() [nsServiceManager.cpp, line 283]
nsServiceManagerImpl::Release() [nsServiceManager.cpp, line 292]
nsServiceManager::ShutdownGlobalServiceManager() [nsServiceManager.cpp, line
544]
NS_ShutdownXPCOM() [nsXPComInit.cpp, line 476]
Netscape 6 + 0x5888 (0x1fa41458)
Netscape 6 + 0x1a0a0 (0x1fa55c70)
Comment 1•24 years ago
|
||
Looks like we're not clearing the copy request on this error.
Summary: Crash mac only File|Quit after stopping a send msg → Crash mac only File|Quit after stopping a send msg
Comment 2•24 years ago
|
||
But why should it crash.
Comment 3•24 years ago
|
||
the copy listener is long gone - it was attached to the compose window, and
we're in app shutdown now.
Comment 4•24 years ago
|
||
I have been crashing with mail without composing (2001060408 trunk).
The stack trace is
Back chain ISA Caller
00000000 PPC 3F1650C4
0AA978B0 PPC 3F1508AC main+00148
0AA97850 PPC 3DD68564 NS_ShutdownXPCOM(nsIServiceManager*)+000E4
0AA97700 PPC 3DD45454 Notify__17nsObserverServiceFP11nsISupportsPCwPCw+000C0
0AA976A0 PPC 3CA97018
Observe__19nsMsgAccountManagerFP11nsISupportsPCwPCw+00130
0AA97250 PPC 3CA96DF4 nsMsgAccountManager::Shutdown()+00054
0AA97210 PPC 3CA9BF3C nsMsgAccountManager::UnloadAccounts()+00080
0AA971D0 PPC 3DD23678 nsHashtable::Reset(int (*)(nsHashKey*, void*,
void*), void*)+000
2C
0AA97190 PPC 3DDEEE88 PL_HashTableEnumerateEntries+00060
0AA97120 PPC 3DD23584 _hashEnumerateRemove(PLHashEntry*, int, void*)+00028
0AA970E0 PPC 3CA9AC10 nsMsgAccountManager::hashElementRelease(nsHashKey*,
void*, void*
)+00018
0AA970A0 PPC 3CBC5B0C nsPop3IncomingServer::Release()+0000C
0AA97060 PPC 3CBD6D58 nsMsgIncomingServer::Release()+00040
0AA97020 PPC 3CBC5D54 nsPop3IncomingServer::~nsPop3IncomingServer()+00118
0AA96FC0 PPC 3CBD6B30 nsMsgIncomingServer::~nsMsgIncomingServer()+000F0
0AA96F60 PPC 3DD2D310 nsCOMPtr_base::~nsCOMPtr_base()+00030
0AA96F20 PPC 3CAB52BC nsMsgFilterList::Release()+00040
I am not sure if this is the same crash.
Comment 5•24 years ago
|
||
Tonight with 0.9.1 on OS 9.1, I experienced a crash after attempting to load
secnews.netscape.com (secure) in News. The server was taking forever to load,
so I hit the "Stop" button, but the throbber continued. I closed the Mail /
News window, went to Navigator, and tried to load a URL. It would not load. I
decided to quit the program. It closed all windows but got stuck. I tried a
force quit, but the mouse ceased to function. I tried bringing up the
programmer dialog for that "SM 0 A9F4" / "G 0" combination, but it wouldn't let
me type, either. I had to hit the reset button on the side of my iMac DV. I
was somewhat able to report this via TalkBack, but I'm not sure how much of this
information got through.
Updated•24 years ago
|
Comment 6•24 years ago
|
||
esther,
Are you still crashing when you quit while sending on the recent builds?
Assignee | ||
Comment 7•23 years ago
|
||
I cannot reproduce the crash but the fact the user can close the compose window
while sending seems wrong. Especially now that we have the progress window in
front (not modal on Mac)
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla0.9.6
Assignee | ||
Comment 8•23 years ago
|
||
I definitivly not able to reproduce the crash. The only remaining problem is
that if the user close the window and say "Quit" to the alert, we correclty
abort the send but forget to close the progress window!
Updating summary
Assignee | ||
Comment 9•23 years ago
|
||
Assignee | ||
Updated•23 years ago
|
Whiteboard: have fix
Comment 10•23 years ago
|
||
Comment on attachment 54966 [details] [diff] [review]
Proposed fix, v1
r=varada
Attachment #54966 -
Flags: review+
Comment 11•23 years ago
|
||
Comment on attachment 54966 [details] [diff] [review]
Proposed fix, v1
sr=bienvenu
Attachment #54966 -
Flags: superreview+
Assignee | ||
Comment 12•23 years ago
|
||
Fixed and checked in
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Whiteboard: have fix
Comment 13•23 years ago
|
||
Verified this on both Mac OS X and Mac 9.1
No crash. Tried to send a message with a large attachment and quit during send
from both mail and browser without mail open.
build: 2001-11-09-06
Status: RESOLVED → VERIFIED
Updated•20 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•