Fix for bug 83752. Need to close the progress window is an error occurs during the send. R=varada, SR=bienvenu